# bocchi

./: Cargo.toml  README.md  fuzz.toml  input.grammar
samples/: sample2.py  vuln  vuln.c
samples/exif/: exif  input.grammar
src/: analysys.rs  configuration.rs  execution.rs  flags.rs  fuzz_thread.rs  fuzzing.rs  generation.rs  grammar.rs  log.rs  main.rs  sample.rs  sample_generation.rs  sample_library.rs  seeding.rs  state.rs  ui.rs
src/grammar/: generation.rs  grammar.rs  mod.rs  parse.rs  validate_grammar.rs
src/mutation/: binary_level.rs  choice.rs  mod.rs  tree_level.rs
