[package]
name = "hwfuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
exitcode = "1.1.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
toml = "0.5.10"
