[package]
name = "bocchifuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
goblin = "0.6.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.152"
serde_derive = "1.0.152"
thiserror = "1.0.38"
toml = "0.5.10"

ptracer = { git = "https://github.com/HectorHW/ptracer.git" }
proc-maps = "0.3.0"
memfile = "0.2.1"
anyhow = "1.0.68"
peg = "0.8.1"
rand_regex = "0.15.1"
regex-syntax = "0.6.29"
